--- a/Readme
+++ b/Readme
@@ -1,1 +1,5 @@
+3d Model of a folding Delta wing glider. 
+It is an Object file. 
+Download the file and import it in 3ds Max or Maya Software or any other designing software that supports OBJ file format.
 
+The textures and colors given to the models are done using keyshot 9 Software.
